qr code component | added attribution

--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@
     font-size: 15px;
 }
 
-html, body {
-
-}
-
 /* Reusable styles */
 
 :root {
@@ -93,16 +89,23 @@ main {
 }
 
 /* Tablet */
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
 
 
 .attribution {
-    display: none;
+    display: block;
+    font: var(--text-preset-1);
+    color: var(--slate-500);
     font-size: 11px;
     text-align: center; 
-
+    position: absolute;
+    top: 5px;
 }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a { 
+    color: var(--slate-900);
 }
 
-/* Desktop */
+.attribution a:hover {
+    color: rgb(54, 133, 255);
+}
+}
